Add initial images.

--- a/app/views/pages/products.html.erb
+++ b/app/views/pages/products.html.erb
@@ -14,42 +14,42 @@
     <ul class="thumbnails">
       <li class="span2">
         <a href="/product" data-target="#product1" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product2" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product3" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product4" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product5" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product6" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product7" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
       <li class="span2">
         <a href="/product" data-target="#product8" class="thumbnail">
-          <img src="http://placehold.it/160x200" alt="">
+          <img src="/assets/160x200.png" alt="">
         </a>
       </li>
     </ul>
