--- a/app/assets/stylesheets/header.css.less
+++ b/app/assets/stylesheets/header.css.less
@@ -1,28 +1,28 @@
 #headerimage {
     width: 940px;    
-    height: 120px;
+    height: 180px;
     margin-top: 2px;
     margin-bottom: 2px;
-    background-image: url(http://placehold.it/940x120);
+    background-image: url(/assets/pier940.jpg);
 }
 
 @media (min-width: 1200px) {
     #headerimage {
         width: 1170px;    
-        background-image: url(http://placehold.it/1170x120);
+        background-image: url(/assets/pier1170.jpg);
     }
 }
 
 @media (min-width: 768px) and (max-width: 980px) {
     #headerimage {
         width: 724px;
-        background-image: url(http://placehold.it/724x120);
+        background-image: url(/assets/pier724.jpg);
     }
 }
 
 @media (max-width: 768px) {
     #headerimage {
         width: 724px;
-        background-image: url(http://placehold.it/724x120);
+        background-image: url(/assets/pier724.jpg);
     }
 }
