Put thumbnail links in yaml.

--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -17,7 +17,7 @@
       <% @products.each_with_index do |product, i|  %>
         <li class="span2">
           <%= link_to(product, { 'data-target' => "#product#{i}", 'class' => 'thumbnail' }) do %>
-            <%= image_tag '160x200.png', :alt => product.name %>
+            <%= image_tag product.thumbnail, :alt => product.name %>
           <% end %>
         </li>
       <% end %>
