--- a/app/views/product_ranges/index.html.erb
+++ b/app/views/product_ranges/index.html.erb
@@ -17,7 +17,7 @@
         <% for product in range.products %>
           <li class="span2">
             <%= link_to(product, { 'data-target' => "#product#{i}", 'class' => 'thumbnail' }) do %>
-              <%= image_tag '160x200.png', :alt => product.name %>
+              <%= image_tag product.thumbnail, :alt => product.name %>
             <% end %>
           </li>
           <% i = i + 1 %>
