Improve navbar, hide carousel on small screens.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <div class="container" style="width: auto">
           
           <ul class="nav">
+            <li><a class="brand pull-left">Brighton Belles</a></li>
             <li class="active">
               <%= link_to 'Home', :root %>
             </li>
@@ -51,8 +52,6 @@
             </li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">One Offs</a></li>
-            <li><a href="#">Commissions</a></li>
             <li><a href="#"><b>Etsy</b></a></li>
           </ul>
 
