--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,7 @@
 
   <div class="span4">
     <h3><%= @product.name %></h3>
-    <p>Stuff about this product</p>
+    <%= simple_format @product.description %>
   </div>
 
 </div>
