Update progress to 30th Apr.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div class="container" style="width: auto">
           
           <ul class="nav">
-            <li><a class="brand pull-left">Brighton Belles</a></li>
+            <li><%= link_to 'Brighton Belles', '/', { :class => 'brand pull-left' } %></li>
             <li class="active">
               <%= link_to 'Home', :root %>
             </li>
