--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,21 @@
 <div id="myCarousel" class="carousel">
   <div class="carousel-inner">
     <div class="active item">
-      <%= image_tag 'widepurse.jpg', :alt => 'First Carousel Image' %>
+      <%= image_tag 'widepurse01.jpg', :alt => 'First Carousel Image' %>
+      <div class="carousel-caption">
+        <h4>First Thumbnail label</h4>
+        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+      </div>
     </div>
     <div class="item">
-      <%= image_tag '1170x480.png', :alt => 'Second Carousel Image' %>
+      <%= image_tag 'frontcushions.jpg', :alt => 'Second Carousel Image' %>
       <div class="carousel-caption">
         <h4>Second Thumbnail label</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
     </div>
     <div class="item">
-      <%= image_tag '1170x480.png', :alt => 'Third Carousel Image' %>
+      <%= image_tag 'fronttweed.jpg', :alt => 'Third Carousel Image' %>
       <div class="carousel-caption">
         <h4>Third Thumbnail label</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
