Improve Pages, add stub contact and about pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,8 @@
                 <li><%= link_to 'All Collections', collections_path %></li>
               </ul>
             </li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><%= link_to 'About', '/pages/about' %></li>
+            <li><%= link_to 'Contact', '/pages/contact' %></li>
             <li><a href="#"><b>Etsy</b></a></li>
           </ul>
 
