Add sticky-footer bits.

--- a/app/assets/stylesheets/footer.css.less
+++ b/app/assets/stylesheets/footer.css.less
@@ -1,5 +1,15 @@
-#footer {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
+html, body {
+    height: 100%;
+}
+footer {
+    padding: 17px 0 18px 0;
+}
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -63px;
+}
+.push {
+    height: 63px;
 }
