--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,103 +8,80 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">
-    <div id="headerimage"></div>
-
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container" style="width: auto">
-          
-          <ul class="nav">
-            <li><%= link_to 'Brighton Belles', '/', { :class => 'brand pull-left' } %></li>
-            <li class="active">
-              <%= link_to 'Home', :root %>
-            </li>
-            <li class="dropdown">
-              <a href="#"
-                 class="dropdown-toggle"
-                 data-toggle="dropdown">
-                Products
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <% for range in @ranges %>
-                  <li><%= link_to range.name, range %></li>
-                <% end %>
-                <li class="divider"></li>
-                <li><%= link_to 'All Products', product_ranges_path %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#"
-                 class="dropdown-toggle"
-                 data-toggle="dropdown">
-                Collections
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <% for collection in @collections %>
-                  <li><%= link_to collection.name, collection %></li>
-                <% end %>
-                <li class="divider"></li>
-                <li><%= link_to 'All Collections', collections_path %></li>
-              </ul>
-            </li>
-            <li><%= link_to 'About', '/pages/about' %></li>
-            <li><%= link_to 'Contact', '/pages/contact' %></li>
-            <li><a href="#"><b>Etsy</b></a></li>
-          </ul>
-
-          <div class="nav-collapse">
-            <form class="navbar-search pull-right">
-              <input type="text" class="search-query" placeholder="Search">
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <%= yield %>
-
-    <div class="row">
-      <div class="span12" id="footer">
-        <div class="row">
-          <div class="span3 offset1">
-            <ul class="nav nav-list">
-              <li class="nav-header">
-                About Us
+  <div class="wrapper">
+    <div class="container">
+      <div id="headerimage"></div>
+      
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="container" style="width: auto">
+            
+            <ul class="nav">
+              <li><%= link_to 'Brighton Belles', '/', { :class => 'brand pull-left' } %></li>
+              <li class="active">
+                <%= link_to 'Home', :root %>
               </li>
-              <li>Contact Us</li>
-              <li>Buying</li>
-              <li>Delivery</li>
-            </ul>
-          </div>
-          <div class="span3 offset1">
-            <ul class="nav nav-list">
-              <li class="nav-header">
-                Links
+              <li class="dropdown">
+                <a href="#"
+                   class="dropdown-toggle"
+                   data-toggle="dropdown">
+                  Products
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <% for range in @ranges %>
+                    <li><%= link_to range.name, range %></li>
+                  <% end %>
+                  <li class="divider"></li>
+                  <li><%= link_to 'All Products', product_ranges_path %></li>
+                </ul>
               </li>
-              <li>Etsy</li>
-              <li>Facebook</li>
-              <li>Twitter</li>
-              <li>Pinterest</li>
-            </ul>
-          </div>
-          <div class="span3 offset1">
-            <ul class="nav nav-list">
-              <li class="nav-header">
-                Products
+              <li class="dropdown">
+                <a href="#"
+                   class="dropdown-toggle"
+                   data-toggle="dropdown">
+                  Collections
+                  <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <% for collection in @collections %>
+                    <li><%= link_to collection.name, collection %></li>
+                  <% end %>
+                  <li class="divider"></li>
+                  <li><%= link_to 'All Collections', collections_path %></li>
+                </ul>
               </li>
-              <li>Cushions</li>
-              <li>Bags</li>
-              <li>Purses</li>
+              <li><%= link_to 'About', '/pages/about' %></li>
+              <li><%= link_to 'Contact', '/pages/contact' %></li>
+              <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Etsy</b></a></li>
             </ul>
+
+            <div class="nav-collapse">
+              <form class="navbar-search pull-right">
+                <input type="text" class="search-query" placeholder="Search">
+              </form>
+            </div>
+
           </div>
         </div>
       </div>
-    </div>
 
+      <%= yield %>
+
+      <div class="push"><!--//--></div>
+    </div>
   </div>
+
+  <footer class="footer">
+    <div class="container">
+      <p class="pull-right">
+          Contact Us
+          Buying
+          Delivery
+      </p>
+      <p>&copy; Copyright 2012 brightonbelles.com</p>
+    </div>
+  </footer>
+  
 </body>
 </html>
