Add ferret search indexing.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,8 @@
             </ul>
 
             <div class="nav-collapse">
-              <form class="navbar-search pull-right">
-                <input type="text" class="search-query" placeholder="Search">
+              <form class="navbar-search pull-right" action="/search" method="get">
+                <input type="text" class="search-query" placeholder="Search" name="q">
               </form>
             </div>
 
