--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,27 @@
 <div id="myCarousel" class="carousel">
   <div class="carousel-inner">
     <div class="active item">
-      <%= image_tag 'widepurse01.jpg', :alt => 'First Carousel Image' %>
+      <%= link_to @carousel_products[0] do %>
+        <% image_tag 'widepurse01.jpg', :alt => 'Butterfly Handbag' %>
+      <% end %>
       <div class="carousel-caption">
-        <h4>First Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+        <h4>Our Amazing Stylish Butterfly Handbag!</h4>
+        <p>Carry your belongings in style with this amazing Butterfly patterned handbag</p>
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'frontcushions.jpg', :alt => 'Second Carousel Image' %>
+      <%= link_to @carousel_products[1] do %>
+        <% image_tag 'frontcushions.jpg', :alt => 'Cushions' %>
+      <% end %>
       <div class="carousel-caption">
         <h4>Second Thumbnail label</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'fronttweed.jpg', :alt => 'Third Carousel Image' %>
+      <%= link_to @carousel_products[2] do %>
+        <% image_tag 'fronttweed.jpg', :alt => 'Tweed Handbag' %>
+      <% end %>
       <div class="carousel-caption">
         <h4>Third Thumbnail label</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
