--- a/app/views/product_ranges/index.html.erb
+++ b/app/views/product_ranges/index.html.erb
@@ -12,7 +12,7 @@
 
     <% i = 0 %>
     <% for range in @ranges %>
-      <h2><%= range.name %></h2>
+      <h2><%= link_to range.name, range %></h2>
       <ul class="thumbnails">
         <% for product in range.products %>
           <li class="span2">
