--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,9 +75,10 @@
   <footer class="footer">
     <div class="container">
       <p class="pull-right">
-          Contact Us
-          Buying
-          Delivery
+        <%= link_to 'About', '/pages/about' %> |
+        <%= link_to 'Contact', '/pages/contact' %> |
+        <%= link_to 'Buying', '/pages/buying' %> |
+        <%= link_to 'Delivery', '/pages/delivery' %>
       </p>
       <p>&copy; Copyright 2012 brightonbelles.com</p>
     </div>
