--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,3 +32,21 @@
   <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 
+<div class="row">
+  <div class="span2">
+    <div id="facebook" data-likeurl="http://www.brightonbelles.com">[Facebook]</div>
+  </div>
+  <div class="span2">
+    <div class="social-button twitter-follow">
+      <a href="http://twitter.com/BellesBulletin" class="twitter-follow-button"
+         data-width="160px" data-show-count="false">Follow @BellesBulletin</a>
+    </div>
+    <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+  </div>
+  <div class="span2">
+    <div class="social-button  pinterest-pinit">
+      <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&media=http%3A%2F%2Fwww.brightonbelles.com%2Fassets%2FIMG_2107.JPG&description=Brighton%20Belles%20-%20pretty%20things" class="pin-it-button" count-layout="horizontal">Pin It</a>
+    </div>
+    <script type="text/javascript" src="http://assets.pinterest.com/js/pinit.js"></script>
+  </div>
+</div>
