--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,48 +20,51 @@
       <div class="navbar">
         <div class="navbar-inner">
           <div class="container" style="width: auto">
-            
+
             <ul class="nav">
               <li><%= link_to 'Brighton Belles', '/', { :class => 'brand pull-left' } %></li>
-              <li class="active">
-                <%= link_to 'Home', :root %>
-              </li>
-              <li class="dropdown">
-                <a href="#"
-                   class="dropdown-toggle"
-                   data-toggle="dropdown">
-                  Products
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <% for range in @ranges %>
-                    <li><%= link_to range.name, range %></li>
-                  <% end %>
-                  <li class="divider"></li>
-                  <li><%= link_to 'All Products', product_ranges_path %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a href="#"
-                   class="dropdown-toggle"
-                   data-toggle="dropdown">
-                  Collections
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <% for collection in @collections %>
-                    <li><%= link_to collection.name, collection %></li>
-                  <% end %>
-                  <li class="divider"></li>
-                  <li><%= link_to 'All Collections', collections_path %></li>
-                </ul>
-              </li>
-              <li><%= link_to 'About', '/pages/about' %></li>
-              <li><%= link_to 'Contact', '/pages/contact' %></li>
-              <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Etsy</b></a></li>
+                <li class="dropdown">
+                  <a href="#"
+                     class="dropdown-toggle"
+                     data-toggle="dropdown">
+                    Products
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <% for range in @ranges %>
+                      <li><%= link_to range.name, range %></li>
+                    <% end %>
+                    <li class="divider"></li>
+                    <li><%= link_to 'All Products', product_ranges_path %></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#"
+                     class="dropdown-toggle"
+                     data-toggle="dropdown">
+                    Collections
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <% for collection in @collections %>
+                      <li><%= link_to collection.name, collection %></li>
+                    <% end %>
+                    <li class="divider"></li>
+                    <li><%= link_to 'All Collections', collections_path %></li>
+                  </ul>
+                </li>
             </ul>
-
+            
             <div class="nav-collapse">
+              
+              <ul class="nav">
+                <li><%= link_to 'About', '/pages/about' %></li>
+                <li><%= link_to 'Contact', '/pages/contact' %></li>
+                <li><%= link_to 'Gallery', '/pages/gallery' %></li>
+                <li><%= link_to 'Commissions', '/pages/commissions' %></li>
+                <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Etsy</b></a></li>
+              </ul>
+
               <form class="navbar-search pull-right" action="/search" method="get">
                 <input type="text" class="search-query" placeholder="Search" name="q">
               </form>
