--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,9 +60,9 @@
               <ul class="nav">
                 <li><%= link_to 'About', '/pages/about' %></li>
                 <li><%= link_to 'Contact', '/pages/contact' %></li>
-                <li><%= link_to 'Gallery', '/pages/gallery' %></li>
-                <li><%= link_to 'Commissions', '/pages/commissions' %></li>
-                <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Etsy</b></a></li>
+                <!-- <li><%= link_to 'Gallery', '/pages/gallery' %></li>
+                <li><%= link_to 'Commissions', '/pages/commissions' %></li> -->
+                <li><a href="http://www.etsy.com/shop/BrightonBelleGifts"><b>Our Etsy Shop</b></a></li>
               </ul>
 
               <form class="navbar-search pull-right" action="/search" method="get">
