Fix thumbnail_ keys - should be carousel_

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,22 +21,22 @@
         <div class="active item">
           <%= image_tag @product.image1, :alt => 'First product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.thumbnail_label %></h4>
-            <p><%= @product.thumbnail_detail %></p>
+            <h4><%= @product.carousel_label %></h4>
+            <p><%= @product.carousel_detail %></p>
           </div>
         </div>
         <div class="item">
           <%= image_tag @product.image2, :alt => 'Second product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.thumbnail_label %></h4>
-            <p><%= @product.thumbnail_detail %></p>
+            <h4><%= @product.carousel_label %></h4>
+            <p><%= @product.carousel_detail %></p>
           </div>
         </div>
         <div class="item">
           <%= image_tag @product.image3, :alt => 'Third product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.thumbnail_label %></h4>
-            <p><%= @product.thumbnail_detail %></p>
+            <h4><%= @product.carousel_label %></h4>
+            <p><%= @product.carousel_detail %></p>
           </div>
         </div>
       </div>
