Fix carousels - auto sliding and continuous operation.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="myCarousel" class="carousel">
+<div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="active item">
       <%= link_to @carousel_products[0] do %>
