--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
       </li>
     </ul>
 
-    <div id="myCarousel" class="carousel">
+    <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="active item">
           <%= image_tag @product.image1, :alt => 'First product image' %>
