Improved degraded facebook content.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,9 @@
 
 <div class="row">
   <div class="span2">
-    <div id="facebook" data-likeurl="http://www.brightonbelles.com">[Facebook]</div>
+    <div id="facebook" data-likeurl="http://www.brightonbelles.com">
+      <a href="http://www.facebook.com/BrightonBelles">facebook.com/BrightonBelles</a>
+    </div>
   </div>
   <div class="span2">
     <div class="social-button twitter-follow">
