--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,9 @@
     </div>
     
     <p>
-      <div id="facebook" data-likeurl="<%= request.url %>">[Facebook]</div>
+      <div id="facebook" data-likeurl="<%= request.url %>">
+        <a href="http://www.facebook.com/BrightonBelles">facebook.com/BrightonBelles</a>
+      </div>
 
       <a href="https://twitter.com/share" class="twitter-share-button twitter-widget"
          data-text="I love this <%= @product.name %>" data-via="BellesBulletin" data-count="horizontal">Tweet</a>
