--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -10,17 +10,15 @@
       </li>
     </ul>
 
-    <% i = 0 %>
     <% for collection in @collections %>
       <h2><%= link_to collection.name, collection %></h2>
       <ul class="thumbnails">
         <% for product in collection.products %>
           <li class="span2">
-            <%= link_to(product, { 'data-target' => "#product#{i}", 'class' => 'thumbnail' }) do %>
+            <%= link_to(product, { 'class' => 'thumbnail' }) do %>
               <%= image_tag product.thumbnail, :alt => product.name %>
             <% end %>
           </li>
-          <% i = i + 1 %>
         <% end %>
       </ul>
     <% end %>
