Fix image sizes for IE's benefit.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -34,7 +34,7 @@
     <ul class="thumbnails">
       <li>
         <%= link_to product_ranges_url, :class => 'thumbnail' do %>
-        <% image_tag '2butterflybag.jpg', :alt => 'Butterfly Bag' %>
+        <% image_tag '2butterflybag.jpg', :alt => 'Butterfly Bag', :size => '350x250' %>
         <% end %>
       </li>
     </ul>
