--- a/app/views/product_ranges/show.html.erb
+++ b/app/views/product_ranges/show.html.erb
@@ -17,7 +17,7 @@
       <% @products.each do |product|  %>
         <li class="span4">
           <%= link_to(product, { 'class' => 'thumbnail' }) do %>
-            <%= image_tag product.thumbnail, :alt => product.name %>
+            <%= image_tag product.thumbnail, :alt => product.name, :size => '350x250' %>
           <% end %>
           <div class="thumbnail-desc">
             <h3><%= product.name %></h3>
