--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -5,7 +5,7 @@
         <ul class="thumbnails">
           <li>
             <%= link_to product, :class => 'thumbnail' do %>
-              <%= image_tag product.thumbnail, :alt => product.name %>
+              <%= image_tag product.thumbnail, :alt => product.name, :size => '150x105' %>
             <% end %>
     	  </li>
         </ul>
@@ -28,7 +28,7 @@
         <% @randoms.each do |product|  %>
           <li class="span4">
             <%= link_to(product, { 'class' => 'thumbnail' }) do %>
-              <%= image_tag product.thumbnail, :alt => product.name %>
+              <%= image_tag product.thumbnail, :alt => product.name, :size => '350x250' %>
             <% end %>
             <div class="thumbnail-desc">
               <h3><%= product.name %></h3>
