Improve mobile + IE layouts.

--- a/app/assets/stylesheets/thumbnails.css.less
+++ b/app/assets/stylesheets/thumbnails.css.less
@@ -1,10 +1,15 @@
 // additional styling for thumbnail grids
 
 .thumbnail-desc {
-  margin: 0px;
-  padding: 8px;
+    margin: 0px;
+    padding: 8px;
 }
 
 .span4:nth-child(4) { 
     clear: left; 
 } 
+
+a.thumbnail {
+    border-width: 6px;
+}
+
