--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,13 +82,13 @@
 
   <footer class="footer">
     <div class="container">
+      <p class="pull-left">&copy; Copyright 2012 brightonbelles.com</p>
       <p class="pull-right">
         <%= link_to 'About', '/pages/about' %> |
         <%= link_to 'Contact', '/pages/contact' %> |
         <%= link_to 'Buying', '/pages/buying' %> |
         <%= link_to 'Delivery', '/pages/delivery' %>
       </p>
-      <p>&copy; Copyright 2012 brightonbelles.com</p>
     </div>
   </footer>
   
