Fix validation nits.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,5 +51,5 @@
   </div>
   <a href="http://twitter.com/BellesBulletin" class="twitter-follow-button twitter-widget"
      data-width="160px" data-show-count="false">Follow @BellesBulletin</a>
-  <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&media=http%3A%2F%2Fwww.brightonbelles.com%2Fassets%2FIMG_2107.JPG&description=Brighton%20Belles%20-%20pretty%20things" class="pin-it-button" count-layout="horizontal">Pin It</a>
+  <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.brightonbelles.com&amp;media=http%3A%2F%2Fwww.brightonbelles.com%2Fassets%2FIMG_2107.JPG&amp;description=Brighton%20Belles%20-%20pretty%20things" class="pin-it-button" data-count-layout="horizontal">Pin It</a>
 </div>
