Remove inline CSS.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,3 +1,9 @@
+// this must come before bootstrap
+.container {
+    width: auto;
+}    
+
+// Import bootstrap + responsive extension
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
