--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       
       <div class="navbar">
         <div class="navbar-inner">
-          <div class="container" style="width: auto">
+          <div class="container">
 
             <ul class="nav">
               <li><%= link_to 'Brighton Belles', '/', { :class => 'brand pull-left' } %></li>
