--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,21 @@
-<h1>Contact</h1>
+<div class="row">
+  <div class="span8">
 
-If you have any questions please contact us at info@brightonbelles.com <br>
+    <h3>Contact</h3>
+    <p>We would love to hear from you. If you have any questions please contact us at info@brightonbelles.com </p>
+	<p>For any queries on orders you have placed email us at orders@brightonbelles.com</p>
 
-For any queries on orders you have placed email us at orders@brightonbelles.com
+  </div>
+
+  <div class="span4">
+
+    <ul class="thumbnails">
+      <li>
+        <%= link_to product_ranges_url, :class => 'thumbnail' do %>
+        <% image_tag 'butterflypurse002.jpg', :alt => 'Butterfly Bag', :size => '360x254' %>
+        <% end %>
+      </li>
+    </ul>
+
+  </div>
+</div>
