--- a/app/views/product_ranges/index.html.erb
+++ b/app/views/product_ranges/index.html.erb
@@ -9,6 +9,8 @@
         All Products
       </li>
     </ul> -->
+    
+    <h3>All Our Products</h3>
 
     <% for range in @ranges %>
       <ul class="thumbnails">
