Fix hiding of carousels.

--- a/app/assets/stylesheets/carousel.css.less
+++ b/app/assets/stylesheets/carousel.css.less
@@ -1,4 +1,5 @@
-@media (max-width: 768px) {
+// hide the carousels on the iPhone
+@media only screen and (max-device-width: 479px) {
     #myCarousel {
         display: none;
     }
