Fix up social media wording and images.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -58,7 +58,7 @@
       <a href="https://twitter.com/share" class="twitter-share-button twitter-widget"
          data-text="I love this <%= @product.name %>" data-via="BellesBulletin" data-count="horizontal">Tweet</a>
 
-      <a href="http://pinterest.com/pin/create/button/?url=<%= u request.url %>&amp;media=<%= u asset_url(@product.image1) %>&amp;description=<%= u 'Brighton Belles - Their Awesome ' + @product.name + '!' %>"
+      <a href="http://pinterest.com/pin/create/button/?url=<%= u request.url %>&amp;media=<%= u asset_url(@product.image1) %>&amp;description=<%= u 'Brighton Belles - Their Amazing ' + @product.name + '!' %>"
          class="pin-it-button" data-count-layout="horizontal">Pin It</a>
     </div>
 
