--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,22 +27,22 @@
         <div class="active item">
           <%= image_tag @product.image1, :alt => 'First product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.carousel_label %></h4>
-            <p><%= @product.carousel_detail %></p>
+            <h4><%= @product.name %></h4>
+            <p><%= @product.carousel_detail1 %></p>
           </div>
         </div>
         <div class="item">
           <%= image_tag @product.image2, :alt => 'Second product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.carousel_label %></h4>
-            <p><%= @product.carousel_detail %></p>
+            <h4><%= @product.name %></h4>
+            <p><%= @product.carousel_detail2 %></p>
           </div>
         </div>
         <div class="item">
           <%= image_tag @product.image3, :alt => 'Third product image' %>
           <div class="carousel-caption">
-            <h4><%= @product.carousel_label %></h4>
-            <p><%= @product.carousel_detail %></p>
+            <h4><%= @product.name %></h4>
+            <p><%= @product.carousel_detail3 %></p>
           </div>
         </div>
       </div>
