--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
         <% image_tag 'frontcushions.jpg', :alt => 'Cushions' %>
       <% end %>
       <div class="carousel-caption">
-        <h4>A Selecion Of Our Scatter Cushions</h4>
+        <h4>A Selection Of Our Scatter Cushions</h4>
         <p>The perfect addition to any room</p>
       </div>
     </div>
@@ -37,7 +37,7 @@
       <% end %>
       <div class="carousel-caption">
         <h4>Our Gorgeous Raspberry Tweed Handbag</h4>
-        <p>The most fabulous handbag! </p>
+        <p>The most fabulous handbag!</p>
       </div>
     </div>
   </div>
