Make the buying/delivery links go to Etsy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,8 +86,7 @@
       <p class="pull-right">
         <%= link_to 'About', '/pages/about' %> |
         <%= link_to 'Contact', '/pages/contact' %> |
-        <%= link_to 'Buying', '/pages/buying' %> |
-        <%= link_to 'Delivery', '/pages/delivery' %>
+        <%= link_to 'Buying and Delivery', 'http://www.etsy.com/shop/BrightonBelleGifts/policy' %>
       </p>
     </div>
   </footer>
